fix layout issues

--- a/src/ui/components/Tempac/Tempac.module.scss
+++ b/src/ui/components/Tempac/Tempac.module.scss
@@ -51,13 +51,13 @@
   justify-content: space-between;
 }
 
-.viewArea {
+.view_area {
   position: relative;
   width: 100%;
   height: 100%;
 }
 
-.viewContainer {
+.view_container {
   position: absolute;
   top: 0; right: 0; bottom: 0; left: 0;
 }
@@ -86,7 +86,7 @@
   filter: brightness(0.5);
 }
 
-.fadingView {
+.fading_view {
   width: 100%;
   height: 100%;
   animation: screenOff 1.5s forwards;
